# sfml-2d-game

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  sfml-2d.cpp  sfml-2d.h
core/: window.cpp  window.hpp
src/: CMakeLists.txt
